Add some integration tests (#74)
* Start on some test cases

* Add test runner etc

* Add to CircleCI

* Make it a bit more flexible for local dev

* Write a logfile for mettle

* Add a test on building plz's core module

* add a little more resilience

* Shift limiter down a bit

* version

* plz version bump?

* Add fflag

* set CI profile

* Add a bit of logging

* Exclude integration tests from normal run

* Just add this to the global path

* fiddle flags a little

* Tweak logging a bit

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,18 @@ jobs:
      working_directory: ~/please
      docker:
        - image: thoughtmachine/please-servers:20200828
+     environment:
+       PLZ_CONFIG_PROFILE: "ci"
      steps:
        - checkout
        - restore_cache:
            key: go-linux-main-v5-{{ checksum "third_party/go/BUILD" }}
        - run:
            name: Test
-           command: ./pleasew test -p --profile ci -v 2
+           command: ./pleasew test -p -v 2 --exclude //tests/...
+       - run:
+           name: Integrashone Tests
+           command: ./pleasew run //tests:test_runner
        - store_test_results:
            path: plz-out/results
        - run:
