--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,11 @@ jobs:
            path: plz-out/results
        - run:
            name: Package
-           command: ./pleasew build //elan //mettle //zeal //flair //lucidity //purity //scripts:gen_release -p --profile ci -v 2
+           command: ./pleasew build //elan //mettle //zeal //flair //lucidity //purity //discern //scripts:gen_release -p --profile ci -v 2
        - persist_to_workspace:
            root: plz-out/bin
            paths:
+             - discern/discern
              - elan/elan
              - flair/flair
              - lucidity/lucidity
@@ -40,7 +41,7 @@ jobs:
      steps:
        - attach_workspace:
            at: /tmp/workspace
-       - run: /tmp/workspace/scripts/gen_release.pex /tmp/workspace/elan/elan /tmp/workspace/flair/flair /tmp/workspace/mettle/mettle /tmp/workspace/purity/purity /tmp/workspace/zeal/zeal /tmp/workspace/lucidity/lucidity
+       - run: /tmp/workspace/scripts/gen_release.pex /tmp/workspace/elan/elan /tmp/workspace/flair/flair /tmp/workspace/mettle/mettle /tmp/workspace/purity/purity /tmp/workspace/zeal/zeal /tmp/workspace/lucidity/lucidity /tmp/workspace/discern/discern
 
 workflows:
   version: 2
