--- a/.plzconfig
+++ b/.plzconfig
@@ -1,6 +1,9 @@
 [please]
 version = >=15.12.0
 
+[featureflags]
+pleasegoinstall = true
+
 [build]
 path = /usr/local/go/bin:/usr/local/bin:/usr/bin:/bin
 
