--- a/lucidity/rpc/BUILD
+++ b/lucidity/rpc/BUILD
@@ -18,7 +18,7 @@ go_library(
         "//proto:lucidity",
         "//third_party/go:cli-init",
         "//third_party/go:protobuf",
-        "//third_party/go/gocloud:api",
+        "//third_party/go:api",
         "//third_party/go/prometheus",
     ],
     visibility = ["//lucidity/..."],
