--- a/.plzconfig
+++ b/.plzconfig
@@ -1,8 +1,5 @@
 [please]
-version = >=15.12.0
-
-[featureflags]
-pleasegoinstall = true
+version = >=16.0.0-prerelease.2
 
 [build]
 path = /usr/local/go/bin:/usr/local/bin:/usr/bin:/bin
