Migrate to go modules (#83)
* Sed all the modules over

* correct rhings

* Change gocloud to a go_mod_download

* Rewrite a bunch of gets

* Fix some modules etc

* more fixes

* more fixes

* Fix many more a thing

* more

* Remove please_go_install

* untypo

* Fix lots of deps

* Set plz version to latest

* Fix a bunch more stuff

* Sort out more versions etc

* Fix more things

* sort out some more things

* last bits!

--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -22,10 +22,10 @@ go_library(
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
         "//third_party/go:ristretto",
-        "//third_party/go:rpcstatus",
+        "//third_party/go:rpc",
         "//third_party/go:zstd",
         "//third_party/go/gocloud",
-        "//third_party/go/gocloud:api",
+        "//third_party/go:api",
         "//third_party/go/prometheus",
     ],
 )
