--- a/mettle/worker/BUILD
+++ b/mettle/worker/BUILD
@@ -6,7 +6,7 @@ go_library(
         "//grpcutil",
         "//proto:lucidity",
         "//third_party/go/gocloud",
-        "//third_party/go/gocloud:genproto",
+        "//third_party/go:longrunning",
         "//third_party/go:bytestream",
         "//third_party/go:cli-init",
         "//third_party/go:copyfile",
@@ -22,7 +22,7 @@ go_library(
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
         "//third_party/go:ristretto",
-        "//third_party/go:rpcstatus",
+        "//third_party/go:rpc",
         "//third_party/proto:cas",
         "//third_party/proto:resourceusage",
         "//mettle/common",
