--- a/flair/trie/BUILD
+++ b/flair/trie/BUILD
@@ -7,7 +7,7 @@ go_library(
     visibility = ["//flair/..."],
     deps = [
         "//proto:purity",
-        "//third_party/go:bytestream",
+        "//third_party/go:genproto",
         "//third_party/go:cli-init",
         "//third_party/go:go-multierror",
         "//third_party/go:grpc",
