--- a/mettle/worker/BUILD
+++ b/mettle/worker/BUILD
@@ -6,8 +6,7 @@ go_library(
         "//grpcutil",
         "//proto:lucidity",
         "//third_party/go/gocloud",
-        "//third_party/go:longrunning",
-        "//third_party/go:bytestream",
+        "//third_party/go:genproto",
         "//third_party/go:cli-init",
         "//third_party/go:copyfile",
         "//third_party/go:errgroup",
@@ -15,7 +14,6 @@ go_library(
         "//third_party/go:grpc",
         "//third_party/go:grpc-middleware",
         "//third_party/go:humanize",
-        "//third_party/go:longrunning",
         "//third_party/go/prometheus",
         "//third_party/go:protobuf",
         "//third_party/go:psutil",
