--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -12,12 +12,11 @@ go_library(
         "//grpcutil",
         "//proto:purity",
         "//rexclient",
-        "//third_party/go:bytestream",
         "//third_party/go:cli-init",
         "//third_party/go:errgroup",
+        "//third_party/go:genproto",
         "//third_party/go:go-multierror",
         "//third_party/go:grpc",
-        "//third_party/go:longrunning",
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
