--- a/mettle/api/BUILD
+++ b/mettle/api/BUILD
@@ -4,11 +4,10 @@ go_library(
     deps = [
         "//grpcutil",
         "//third_party/go/gocloud",
-        "//third_party/go:bytestream",
         "//third_party/go:cli-init",
+        "//third_party/go:genproto",
         "//third_party/go:grpc",
         "//third_party/go:logging",
-        "//third_party/go:longrunning",
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
         "//third_party/go/prometheus",
