Consolidate genproto targets (#85)
* Consolidate genproto targets

* plz fmt

* More updates

--- a/mettle/api/BUILD
+++ b/mettle/api/BUILD
@@ -1,20 +1,19 @@
 go_library(
     name = "api",
     srcs = ["api.go"],
+    visibility = ["//mettle/..."],
     deps = [
         "//grpcutil",
-        "//third_party/go/gocloud",
-        "//third_party/go:bytestream",
+        "//mettle/common",
         "//third_party/go:cli-init",
+        "//third_party/go:genproto",
         "//third_party/go:grpc",
         "//third_party/go:logging",
-        "//third_party/go:longrunning",
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
+        "//third_party/go/gocloud",
         "//third_party/go/prometheus",
-        "//mettle/common",
     ],
-    visibility = ["//mettle/..."],
 )
 
 go_test(
@@ -23,11 +22,11 @@ go_test(
     deps = [
         ":api",
         "//grpcutil",
+        "//third_party/go:genproto",
         "//third_party/go:grpc",
-        "//third_party/go/gocloud",
-        "//third_party/go:testify",
-        "//third_party/go:longrunning",
-        "//third_party/go:remote-apis",
         "//third_party/go:protobuf",
+        "//third_party/go:remote-apis",
+        "//third_party/go:testify",
+        "//third_party/go/gocloud",
     ],
 )
