--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -12,12 +12,12 @@ go_library(
         "//grpcutil",
         "//proto:purity",
         "//rexclient",
-        "//third_party/go:bytestream",
+        "//third_party/go:api",
         "//third_party/go:cli-init",
         "//third_party/go:errgroup",
+        "//third_party/go:genproto",
         "//third_party/go:go-multierror",
         "//third_party/go:grpc",
-        "//third_party/go:longrunning",
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
@@ -25,7 +25,6 @@ go_library(
         "//third_party/go:rpc",
         "//third_party/go:zstd",
         "//third_party/go/gocloud",
-        "//third_party/go:api",
         "//third_party/go/prometheus",
     ],
 )
@@ -37,7 +36,7 @@ go_test(
     deps = [
         ":rpc",
         "//grpcutil",
-        "//third_party/go:bytestream",
+        "//third_party/go:genproto",
         "//third_party/go:grpc",
         "//third_party/go:remote-apis",
         "//third_party/go:testify",
