Register it in various places

--- a/mettle/BUILD
+++ b/mettle/BUILD
@@ -6,6 +6,7 @@ go_binary(
         "//grpcutil",
         "//mettle/api",
         "//mettle/common",
+        "//mettle/omempubsub",
         "//mettle/worker",
         "//third_party/go:cli-init",
     ],
