Chuck a logger in

--- a/mettle/omempubsub/BUILD
+++ b/mettle/omempubsub/BUILD
@@ -2,6 +2,7 @@ go_library(
     name = "omempubsub",
     srcs = ["omem.go"],
     deps = [
+        "//third_party/go:cli-init",
         "//third_party/go/gocloud",
     ],
     visibility = ["//mettle/..."],
