Check in generated code :(

--- a/proto/BUILD
+++ b/proto/BUILD
@@ -9,3 +9,13 @@ grpc_library(
     srcs = ["purity.proto"],
     visibility = ["PUBLIC"],
 )
+
+sh_cmd(
+    name = "generate",
+    cmd = "cp $(out_location :_lucidity#go) proto/lucidity.pb.go && cp $(out_location :_purity#go) proto/purity.pb.go",
+    data = [
+        ":_lucidity#go",
+        ":_purity#go",
+    ],
+    labels = ["codegen"],
+)
