--- a/sandbox/BUILD
+++ b/sandbox/BUILD
@@ -8,10 +8,12 @@ c_binary(
     name = "sandbox",
     srcs = ["main.c"],
     deps = [":sandbox_lib"],
+    visibility = ["PUBLIC"],
 )
 
 c_binary(
     name = "alt_sandbox",
     srcs = ["alt_main.c"],
     deps = [":sandbox_lib"],
+    visibility = ["PUBLIC"],
 )
