--- a/mettle/common/BUILD
+++ b/mettle/common/BUILD
@@ -6,6 +6,8 @@ go_library(
         "//mettle/omempubsub",
         "//third_party/go:cli-init",
         "//third_party/go:genproto",
+        "//third_party/go:grpc",
+        "//third_party/go:remote-apis",
         "//third_party/go/gocloud",
     ],
 )
