Bootstrap Mettle api servers (#97)
* adding proto

* Adding bootstrap servers

* Adding client draft

* improving client

* cleaning up

* adding test

* improving tests

* fixing Get Executions

* fixing lint errors

* Fixing api_test

* More linting

* Correcting api_test

* test lint

* test lint

* moving clientconn to getExecutions

* Replying to comments

* Improving getExecutions error message

* further cleaning up error message

* Adding bootstrap RPC to authenticatedMethods and add TLS to api opts

* linting

--- a/proto/BUILD
+++ b/proto/BUILD
@@ -10,12 +10,19 @@ grpc_library(
     visibility = ["PUBLIC"],
 )
 
+grpc_library(
+    name = "mettle",
+    srcs = ["mettle.proto"],
+    visibility = ["PUBLIC"],
+)
+
 sh_cmd(
     name = "generate",
-    cmd = "cp $(out_location :_lucidity#protoc_go) proto/lucidity && cp $(out_location :_purity#protoc_go) proto/purity",
+    cmd = "cp $(out_location :_lucidity#protoc_go) proto/lucidity && cp $(out_location :_purity#protoc_go) proto/purity && cp $(out_location :_mettle#protoc_go) proto/mettle",
     data = [
         ":_lucidity#protoc_go",
         ":_purity#protoc_go",
+        ":_mettle#protoc_go",
     ],
     labels = ["codegen"],
 )
