--- a/mettle/api/BUILD
+++ b/mettle/api/BUILD
@@ -5,6 +5,7 @@ go_library(
     deps = [
         "//grpcutil",
         "//mettle/common",
+        "//proto:mettle",
         "//third_party/go:cli-init",
         "//third_party/go:genproto",
         "//third_party/go:grpc",
@@ -22,6 +23,7 @@ go_test(
     deps = [
         ":api",
         "//grpcutil",
+        "//proto:mettle",
         "//third_party/go:genproto",
         "//third_party/go:grpc",
         "//third_party/go:protobuf",
