--- a/mettle/common/BUILD
+++ b/mettle/common/BUILD
@@ -3,8 +3,8 @@ go_library(
     srcs = ["common.go"],
     visibility = ["//mettle/..."],
     deps = [
-        "//mettle/gcprpubsub",
-        "//mettle/omempubsub",
+        "//mettle/gcppubsub",
+        "//mettle/mempubsub",
         "//third_party/go:cli-init",
         "//third_party/go:genproto",
         "//third_party/go:grpc",
