--- a/mettle/mempubsub/BUILD
+++ b/mettle/mempubsub/BUILD
@@ -1,8 +1,8 @@
 go_library(
-    name = "omempubsub",
+    name = "mempubsub",
     srcs = ["omem.go"],
+    visibility = ["//mettle/..."],
     deps = [
         "//third_party/go/gocloud",
     ],
-    visibility = ["//mettle/..."],
 )
