Add redis client

--- a/mettle/worker/BUILD
+++ b/mettle/worker/BUILD
@@ -20,6 +20,7 @@ go_library(
         "//third_party/go:humanize",
         "//third_party/go:protobuf",
         "//third_party/go:psutil",
+        "//third_party/go:redis",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
         "//third_party/go:ristretto",
