Tweak a couple of settings

--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -104,7 +104,7 @@ port 6379
 # will silently truncate it to the value of /proc/sys/net/core/somaxconn so
 # make sure to raise both the value of somaxconn and tcp_max_syn_backlog
 # in order to get the desired effect.
-tcp-backlog 511
+tcp-backlog 128
 
 # Unix socket.
 #
@@ -962,7 +962,7 @@ acllog-max-len 128
 # connections, one incoming and another outgoing. It is important to size the
 # limit accordingly in case of very large clusters.
 #
-# maxclients 10000
+maxclients 200
 
 ############################## MEMORY MANAGEMENT ################################
 
