--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -989,7 +989,7 @@ maxclients 200
 # limit for maxmemory so that there is some free RAM on the system for replica
 # output buffers (but this is not needed if the policy is 'noeviction').
 #
-# maxmemory <bytes>
+maxmemory 104857600
 
 # MAXMEMORY POLICY: how Redis will select what to remove when maxmemory
 # is reached. You can select one from the following behaviors:
@@ -1018,7 +1018,7 @@ maxclients 200
 #
 # The default is:
 #
-# maxmemory-policy noeviction
+maxmemory-policy allkeys-lfu
 
 # LRU, LFU and minimal TTL algorithms are not precise algorithms but approximated
 # algorithms (in order to save memory), so you can tune it for speed or
@@ -1029,7 +1029,7 @@ maxclients 200
 # The default of 5 produces good enough results. 10 Approximates very closely
 # true LRU but costs more CPU. 3 is faster but not very accurate.
 #
-# maxmemory-samples 5
+maxmemory-samples 5
 
 # Eviction processing is designed to function well with the default setting.
 # If there is an unusually large amount of write traffic, this value may need to
