Centralise packs more

--- a/mettle/worker/BUILD
+++ b/mettle/worker/BUILD
@@ -1,9 +1,6 @@
 go_library(
     name = "worker",
-    srcs = glob(
-        ["*.go"],
-        exclude = ["*_test.go"],
-    ),
+    srcs = glob(["*.go"]),
     visibility = ["//mettle/..."],
     deps = [
         "//cli",
@@ -34,17 +31,5 @@ go_library(
         "//third_party/go/prometheus:prometheus_common",
         "//third_party/proto:cas",
         "//third_party/proto:resourceusage",
-    ],
-)
-
-go_test(
-    name = "worker_test",
-    srcs = ["worker_test.go"],
-    deps = [
-        ":worker",
-        "//rexclient",
-        "//third_party/go:remote-apis",
-        "//third_party/go:remote-apis-sdks",
-        "//third_party/go:testify",
     ],
 )
