--- a/rexclient/BUILD
+++ b/rexclient/BUILD
@@ -1,6 +1,9 @@
 go_library(
     name = "rexclient",
-    srcs = ["client.go"],
+    srcs = [
+        "client.go",
+        "packs.go",
+    ],
     visibility = ["PUBLIC"],
     deps = [
         "//grpcutil",
@@ -8,4 +11,14 @@ go_library(
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
     ],
+)
+
+go_test(
+    name = "packs_test",
+    srcs = ["packs_test.go"],
+    deps = [
+        ":rexclient",
+        "//third_party/go:remote-apis",
+        "//third_party/go:remote-apis-sdks",
+        "//third_party/go:testify",    ],
 )
