Excise go_bindata in favour of 1.16 embedding

--- a/lucidity/rpc/BUILD
+++ b/lucidity/rpc/BUILD
@@ -1,18 +1,10 @@
-subinclude("//build_defs:go_bindata")
-
-go_bindata(
-    name = "static_files",
-    srcs = glob(["static/*.*"]),
-    prefix = "$PKG/static",
-)
-
 go_library(
     name = "rpc",
     srcs = [
         "auth.go",
         "rpc.go",
-        ":static_files",
     ],
+    resources = glob(["static/*.*"]),
     visibility = ["//lucidity/..."],
     deps = [
         "//grpcutil",
@@ -32,11 +24,4 @@ go_test(
         "//proto:lucidity",
         "//third_party/go:testify",
     ],
-)
-
-sh_cmd(
-    name = "generate",
-    data = [":static_files"],
-    cmd = "cp $(out_location :static_files) lucidity/rpc/",
-    labels = ["codegen"],
 )
