Excise go_bindata in favour of 1.16 embedding (#128)
* Excise go_bindata in favour of 1.16 embedding

* fix test

--- a/lucidity/rpc/BUILD
+++ b/lucidity/rpc/BUILD
@@ -1,18 +1,10 @@
-subinclude("//build_defs:go_bindata")
-
-go_bindata(
-    name = "static_files",
-    srcs = glob(["static/*.*"]),
-    prefix = "$PKG/static",
-)
-
 go_library(
     name = "rpc",
     srcs = [
         "auth.go",
         "rpc.go",
-        ":static_files",
     ],
+    resources = glob(["static/*.*"]),
     visibility = ["//lucidity/..."],
     deps = [
         "//grpcutil",
@@ -27,16 +19,10 @@ go_library(
 go_test(
     name = "rpc_test",
     srcs = ["rpc_test.go"],
+    resources = glob(["static/*.*"]),
     deps = [
         ":rpc",
         "//proto:lucidity",
         "//third_party/go:testify",
     ],
-)
-
-sh_cmd(
-    name = "generate",
-    data = [":static_files"],
-    cmd = "cp $(out_location :static_files) lucidity/rpc/",
-    labels = ["codegen"],
 )
