Implements 'packs' on download (#129)
* starting on pack support

* Start on packs in the download side

* bit more

* bit more

* bit more

* fix client

* Extract with right permissions

* fix things

* Centralise packs more

* Add it to Purity

* Have Elan honour them on fetch

* Update Discern to display packs if they exist

* update remote-apis-sdks

* Have purity also not gc the equivalent proto

* version

* simplify

* honour stopAtPack fully

* Fix up lint

* moar lint

* Check path name before extracting

--- a/rexclient/BUILD
+++ b/rexclient/BUILD
@@ -1,11 +1,26 @@
 go_library(
     name = "rexclient",
-    srcs = ["client.go"],
+    srcs = [
+        "client.go",
+        "packs.go",
+    ],
     visibility = ["PUBLIC"],
     deps = [
         "//grpcutil",
         "//third_party/go:cli-init",
+        "//third_party/go:grpc",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
+    ],
+)
+
+go_test(
+    name = "packs_test",
+    srcs = ["packs_test.go"],
+    deps = [
+        ":rexclient",
+        "//third_party/go:remote-apis",
+        "//third_party/go:remote-apis-sdks",
+        "//third_party/go:testify",
     ],
 )
