--- a/mettle/worker/BUILD
+++ b/mettle/worker/BUILD
@@ -25,6 +25,7 @@ go_library(
         "//third_party/go:remote-apis-sdks",
         "//third_party/go:ristretto",
         "//third_party/go:rpc",
+        "//third_party/go:zstd",
         "//third_party/go/gocloud",
         "//third_party/go/prometheus",
         "//third_party/go/prometheus:prometheus_common",
