--- a/mettle/api/BUILD
+++ b/mettle/api/BUILD
@@ -12,6 +12,7 @@ go_library(
         "//third_party/go:grpc",
         "//third_party/go:logging",
         "//third_party/go:protobuf",
+        "//third_party/go:rpc",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
         "//third_party/go/gocloud",
