--- a/mettle/common/BUILD
+++ b/mettle/common/BUILD
@@ -8,6 +8,7 @@ go_library(
         "//third_party/go:cli-init",
         "//third_party/go:genproto",
         "//third_party/go:grpc",
+        "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
         "//third_party/go/gocloud",
     ],
