Add a bunch of test cases

--- a/flair/trie/BUILD
+++ b/flair/trie/BUILD
@@ -20,6 +20,7 @@ go_test(
     srcs = glob(["*_test.go"]),
     deps = [
         ":trie",
+        "//third_party/go:go-multierror",
         "//third_party/go:grpc",
         "//third_party/go:testify",
     ],
