--- a/.plzconfig
+++ b/.plzconfig
@@ -4,7 +4,11 @@ version = >=16.19.0
 [build]
 path = /usr/local/go/bin:/usr/local/bin:/usr/bin:/bin
 
-[go]
+[parse]
+defaultsubincludes = ///go//build_defs:go
+
+[plugin "go"]
+target = //plugins:go
 importpath = github.com/thought-machine/please-servers
 gopath = $TMP_DIR:$TMP_DIR/third_party/go:$TMP_DIR/third_party/go/prometheus:$TMP_DIR/third_party/go/gocloud
 
