--- a/proto/BUILD
+++ b/proto/BUILD
@@ -1,24 +1,6 @@
-grpc_library(
-    name = "lucidity",
-    srcs = ["lucidity.proto"],
-    visibility = ["PUBLIC"],
-)
-
-grpc_library(
-    name = "purity",
-    srcs = ["purity.proto"],
-    visibility = ["PUBLIC"],
-)
-
-grpc_library(
-    name = "mettle",
-    srcs = ["mettle.proto"],
-    visibility = ["PUBLIC"],
-)
-
 sh_cmd(
     name = "generate",
-    cmd = "cp $(out_location :_lucidity#protoc_go) proto/lucidity && cp $(out_location :_purity#protoc_go) proto/purity && cp $(out_location :_mettle#protoc_go) proto/mettle",
+    cmd = "cp $(out_location //proto/lucidity:_lucidity#protoc_go) proto/lucidity && cp $(out_location //proto/purity:_purity#protoc_go) proto/purity && cp $(out_location //proto/mettle:_mettle#protoc_go) proto/mettle",
     data = [
         ":_lucidity#protoc_go",
         ":_purity#protoc_go",
