Moving to Github Actions for release

--- a/discern/BUILD
+++ b/discern/BUILD
@@ -11,4 +11,5 @@ go_binary(
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
     ],
+    visibility = ["//package:all"],
 )
