Replace golint with revive.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -38,7 +38,7 @@ linters:
     - exportloopref
     - gocritic
     - gofmt
-    - golint
+    - revive
     - misspell
     - prealloc
     - unconvert
