Set GOGC on golangci-lint step.

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           go-version: '^1.18'
       - name: golangci-lint
+        env:
+          GOGC: 20
         uses: golangci/golangci-lint-action@v2
         with:
           version: v1.45.0
