--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -14,6 +14,7 @@ go_library(
         "//rexclient",
         "//third_party/go:api",
         "//third_party/go:cli-init",
+        "//third_party/go:cloud-storage",
         "//third_party/go:errgroup",
         "//third_party/go:genproto",
         "//third_party/go:go-multierror",
