Update Go plugin and actually use toolchain

--- a/.plzconfig
+++ b/.plzconfig
@@ -10,6 +10,7 @@ preloadsubincludes = ///go//build_defs:go
 [plugin "go"]
 target = //plugins:go
 importpath = github.com/thought-machine/please-servers
+gotool = //third_party/go:toolchain|go
 
 [python]
 moduledir = third_party/python
