--- a/.plzconfig
+++ b/.plzconfig
@@ -1,5 +1,5 @@
 [please]
-version = >=16.27.5
+version = >=17.0.0-beta.7
 
 [build]
 path = /usr/local/go/bin:/usr/local/bin:/usr/bin:/bin
@@ -14,6 +14,7 @@ target = //plugins:go
 importpath = github.com/thought-machine/please-servers
 gotool = //third_party/go:toolchain|go
 coverageredesign = true
+legacyimports = false
 
 [python]
 moduledir = third_party/python
@@ -35,9 +36,12 @@ target = //plugins:shell
 target = //plugins:proto
 languagedef = ///go_proto//build_defs:go
 
-[featureflags]
-excludeccrules = true
-excludegorules = true
+[plugin "go_proto"]
+target = //plugins:go-proto
+grpcplugin = //third_party/go:protoc-gen-go-grpc
+protoplugin = //third_party/go:protoc-gen-go
+protodep = //third_party/go:golang-protobuf
+grpcdep = //third_party/go:grpc
 
 [alias "runlocal"]
 cmd = run parallel //elan:run_local //mettle:run_local //browser:run_local //zeal:run_local //flair:run_local //lucidity:run_local //redis:run_local
