--- a/plugins/BUILD
+++ b/plugins/BUILD
@@ -7,3 +7,23 @@ plugin_repo(
     name = "cc",
     revision = "v0.3.1",
 )
+
+plugin_repo(
+    name = "shell",
+    revision = "v0.1.2",
+)
+
+plugin_repo(
+    name = "proto",
+    revision = "v0.2.1",
+)
+
+plugin_repo(
+    name = "go-proto",
+    revision = "v0.2.0",
+)
+
+plugin_repo(
+    name = "python",
+    revision = "v1.2.4",
+)
