Stop specifying compressors on BatchDownloadBlobs (#233)
* Stop specifying compressors on BatchDownloadBlobs

* fixes

* fix redis

* Fix a couple of things

--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -395,7 +395,7 @@ proc-title-template "{title} {listen-addr} {server-mode}"
 # and persistence, you may want to disable this feature so that Redis will
 # continue to work as usual even if there are problems with disk,
 # permissions, and so forth.
-stop-writes-on-bgsave-error yes
+stop-writes-on-bgsave-error no
 
 # Compress string objects using LZF when dump .rdb databases?
 # By default compression is enabled as it's almost always a win.
@@ -552,7 +552,7 @@ replica-read-only yes
 #
 # With slow disks and fast (large bandwidth) networks, diskless replication
 # works better.
-repl-diskless-sync no
+repl-diskless-sync yes
 
 # When diskless replication is enabled, it is possible to configure the delay
 # the server waits in order to spawn the child that transfers the RDB via socket
