--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -16,6 +16,7 @@ go_library(
         "//third_party/go:cli-init",
         "//third_party/go:cloud-storage",
         "//third_party/go:errgroup",
+        "//third_party/go:exp",
         "//third_party/go:genproto",
         "//third_party/go:go-multierror",
         "//third_party/go:grpc",
